--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -2,14 +2,14 @@
 <packages>
   <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net48" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
-  <package id="Azure.Core" version="1.25.0" targetFramework="net48" />
+  <package id="Azure.Core" version="1.31.0" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
-  <package id="DocumentFormat.OpenXml" version="2.19.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="2.20.0" targetFramework="net481" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
   <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net48" />
-  <package id="JavaScriptEngineSwitcher.Core" version="3.19.0" targetFramework="net48" />
-  <package id="jQuery" version="3.6.3" targetFramework="net48" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.21.0" targetFramework="net481" />
+  <package id="jQuery" version="3.6.4" targetFramework="net481" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
   <package id="JSPool" version="4.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
@@ -19,17 +19,16 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization.tr" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages.tr" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Antiforgery" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authentication.Core" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Authorization" version="7.0.2" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Authorization" version="7.0.5" targetFramework="net481" />
   <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.DataProtection" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="7.0.2" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="7.0.5" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="3.1.32" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="3.1.32" targetFramework="net481" />
   <package id="Microsoft.AspNetCore.Diagnostics.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net48" />
@@ -38,31 +37,31 @@
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Features" version="5.0.17" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Identity.UI" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.JsonPatch" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Metadata" version="7.0.2" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Identity.UI" version="7.0.5" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.JsonPatch" version="7.0.5" targetFramework="net481" />
+  <package id="Microsoft.AspNetCore.Metadata" version="7.0.5" targetFramework="net481" />
   <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.Core" version="2.2.5" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.DataAnnotations" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.Razor" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Mvc.Razor.Extensions" version="6.0.13" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Mvc.Razor.Extensions" version="6.0.16" targetFramework="net481" />
   <package id="Microsoft.AspNetCore.Mvc.RazorPages" version="2.2.5" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.ViewFeatures" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.WebApiCompatShim" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Razor.Language" version="6.0.13" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Razor.Language" version="6.0.16" targetFramework="net481" />
   <package id="Microsoft.AspNetCore.Razor.Runtime" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Routing" version="2.2.2" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.3" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="4.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="4.4.0" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Razor" version="6.0.13" targetFramework="net48" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.4" targetFramework="net481" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="4.5.0" targetFramework="net481" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="4.5.0" targetFramework="net481" />
+  <package id="Microsoft.CodeAnalysis.Razor" version="6.0.16" targetFramework="net481" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.DiaSymReader.Native" version="1.7.0" targetFramework="net48" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="3.1.6" targetFramework="net48" />
@@ -75,32 +74,40 @@
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Composite" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Localization" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Localization.Abstractions" version="7.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Localization" version="7.0.5" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Localization.Abstractions" version="7.0.5" targetFramework="net481" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.ObjectPool" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.ObjectPool" version="7.0.5" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net481" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.WebEncoders" version="7.0.2" targetFramework="net48" />
-  <package id="Microsoft.Graph.Core" version="2.0.14" targetFramework="net48" />
-  <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Abstractions" version="6.23.1" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.23.1" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.23.1" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.23.1" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.23.1" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.23.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.WebEncoders" version="7.0.5" targetFramework="net481" />
+  <package id="Microsoft.Graph.Core" version="3.0.5" targetFramework="net481" />
+  <package id="Microsoft.Identity.Client" version="4.53.0" targetFramework="net481" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.29.0" targetFramework="net481" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.29.0" targetFramework="net481" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.29.0" targetFramework="net481" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.29.0" targetFramework="net481" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.29.0" targetFramework="net481" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.29.0" targetFramework="net481" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net48" />
+  <package id="Microsoft.Kiota.Abstractions" version="1.1.1" targetFramework="net481" />
+  <package id="Microsoft.Kiota.Authentication.Azure" version="1.0.2" targetFramework="net481" />
+  <package id="Microsoft.Kiota.Http.HttpClientLibrary" version="1.0.1" targetFramework="net481" />
+  <package id="Microsoft.Kiota.Serialization.Form" version="1.0.1" targetFramework="net481" />
+  <package id="Microsoft.Kiota.Serialization.Json" version="1.0.5" targetFramework="net481" />
+  <package id="Microsoft.Kiota.Serialization.Text" version="1.0.1" targetFramework="net481" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.2" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="MvcCheckBoxList" version="1.4.5" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
-  <package id="ServiceStack.Client" version="6.5.0" targetFramework="net48" />
-  <package id="ServiceStack.Interfaces" version="6.5.0" targetFramework="net48" />
-  <package id="ServiceStack.Text" version="6.5.0" targetFramework="net48" />
+  <package id="ServiceStack.Client" version="6.8.0" targetFramework="net481" />
+  <package id="ServiceStack.Interfaces" version="6.8.0" targetFramework="net481" />
+  <package id="ServiceStack.Text" version="6.8.0" targetFramework="net481" />
   <package id="SweetAlert" version="1.0.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
@@ -112,13 +119,13 @@
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net481" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.23.1" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.29.0" targetFramework="net481" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
@@ -126,14 +133,14 @@
   <package id="System.IO.Pipelines" version="7.0.0" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
-  <package id="System.Management" version="7.0.0" targetFramework="net48" />
+  <package id="System.Management" version="7.0.1" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Memory.Data" version="7.0.0" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
-  <package id="System.Net.Http.WinHttpHandler" version="6.0.1" targetFramework="net48" />
+  <package id="System.Net.Http.WinHttpHandler" version="7.0.0" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
-  <package id="System.Reflection.Metadata" version="7.0.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="7.0.1" targetFramework="net481" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
@@ -142,6 +149,7 @@
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Claims" version="4.3.0" targetFramework="net481" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
@@ -153,7 +161,7 @@
   <package id="System.Text.Encoding.CodePages" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="7.0.1" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net481" />
   <package id="System.Threading" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
@@ -165,6 +173,7 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net48" />
+  <package id="Tavis.UriTemplates" version="2.0.0" targetFramework="net481" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
